objects/ProjectObject__c.object
<CustomObject>
    <description>Used for PSA work</description>
    <fields>
        <fullName>A_O_Lead__c</fullName>
        <label>A&amp;O Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andrew Speer</fullName>
                </value>
                <value>
                    <fullName>Brian Roote</fullName>
                </value>
                <value>
                    <fullName>Courtney Van Overberghe</fullName>
                </value>
                <value>
                    <fullName>Ian Smith</fullName>
                </value>
                <value>
                    <fullName>Jay Janovics</fullName>
                </value>
                <value>
                    <fullName>Joel Butler</fullName>
                </value>
                <value>
                    <fullName>Kimberly Wrenn</fullName>
                </value>
                <value>
                    <fullName>Nick Zarns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>PS_Project_Number__r.Account__r.Owner.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>PS_Project_Number__r.Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <description>Field used in backend for sending email to Account Owner on click of Notify Account Manager Button.</description>
        <formula>Account__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <description>Field is used at backend and used in template to send notification to Account Owner.</description>
        <formula>Account__r.Owner.FirstName &amp;&apos; &apos;&amp; Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Scoped_Days__c</fullName>
        <inlineHelpText>Please add additional scoped days once agreed by LBU with a reason</inlineHelpText>
        <label>Additional Scoped Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreed_Delivery_Target__c</fullName>
        <label>Agreed Delivery Target</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreed_Project_Price_PS__c</fullName>
        <inlineHelpText>Please enter the price agreed with the client for Professional Services work in this project.</inlineHelpText>
        <label>Agreed Project Price (PS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Project_Price_Product__c</fullName>
        <inlineHelpText>Please enter the price agreed with the client for Product (e.g. units) for this project.</inlineHelpText>
        <label>Agreed Project Price (Product)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Project_Price_SPS__c</fullName>
        <inlineHelpText>Please enter the price agreed with the client for SPS work.</inlineHelpText>
        <label>Agreed Project Price (SPS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Project_Price_TS__c</fullName>
        <inlineHelpText>Please enter the price agreed with the client for Technology Solutions implementations as part of this project.</inlineHelpText>
        <label>Agreed Project Price (TS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Project_Price_Total__c</fullName>
        <formula>Agreed_Project_Price_Product__c  +  Agreed_Project_Price_PS__c  +  Agreed_Project_Price_TS__c +  Agreed_Project_Price_SPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreed Project Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associate_Chargeable_Expenses__c</fullName>
        <description>Associate and Other Costs Chargeable Expenses- to be used in Total Expenses</description>
        <inlineHelpText>Associate and Other Costs Chargeable Expenses</inlineHelpText>
        <label>Associate Chargeable Expenses</label>
        <summarizedField>Associate__c.Expenses__c</summarizedField>
        <summaryFilterItems>
            <field>Associate__c.Rechargeable__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Associate__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Associate_and_Other_Cost_Expenses__c</fullName>
        <description>Associate and Other Costs Expenses</description>
        <inlineHelpText>Associate and Other Costs Expenses</inlineHelpText>
        <label>Associate and Other Cost Expenses</label>
        <summarizedField>Associate__c.Expenses__c</summarizedField>
        <summaryForeignKey>Associate__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Audit_Comments__c</fullName>
        <label>Audit Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Audit_Complete__c</fullName>
        <label>Audit Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Document__c</fullName>
        <label>Audit Document</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Pass_Fail__c</fullName>
        <label>Audit Pass/Fail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_in_Certify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available in Certify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable_Days__c</fullName>
        <label>Billable Days</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Billing Contact)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booked_versus_actual_hours__c</fullName>
        <formula>(  Total_Actual_Time__c / Total_Booked_Hours__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked versus actual days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPS_Approved_SOW__c</fullName>
        <label>CPS Approved SOW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPS_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPS_Per_Hour_Cost__c</fullName>
        <defaultValue>300</defaultValue>
        <label>CPS Per Day Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPS_Project_Manager_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPS Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Is_CPS_Project_Manager__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPS_Project_Manager__c</fullName>
        <label>CPS Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abhishek Yadav</fullName>
                </value>
                <value>
                    <fullName>Akhil Aggarwal</fullName>
                </value>
                <value>
                    <fullName>Amandeepti</fullName>
                </value>
                <value>
                    <fullName>Anmol Kaul Dembi</fullName>
                </value>
                <value>
                    <fullName>Anna Perry</fullName>
                </value>
                <value>
                    <fullName>Brian Swords</fullName>
                </value>
                <value>
                    <fullName>Cathy Agnew</fullName>
                </value>
                <value>
                    <fullName>Claire Fix</fullName>
                </value>
                <value>
                    <fullName>Clay Ferrell</fullName>
                </value>
                <value>
                    <fullName>David Egerton-Smith</fullName>
                </value>
                <value>
                    <fullName>Debbie Determan</fullName>
                </value>
                <value>
                    <fullName>Deede Fulton</fullName>
                </value>
                <value>
                    <fullName>Dimple</fullName>
                </value>
                <value>
                    <fullName>Dragan Dragas</fullName>
                </value>
                <value>
                    <fullName>Ellie Mullins</fullName>
                </value>
                <value>
                    <fullName>Gavin Grover</fullName>
                </value>
                <value>
                    <fullName>Gemma Townsend</fullName>
                </value>
                <value>
                    <fullName>Giampaolo Squadroni</fullName>
                </value>
                <value>
                    <fullName>Hernan De Armas</fullName>
                </value>
                <value>
                    <fullName>Jaishree Medepalli</fullName>
                </value>
                <value>
                    <fullName>Jayant Yadav</fullName>
                </value>
                <value>
                    <fullName>Jennifer Blamey</fullName>
                </value>
                <value>
                    <fullName>Jennifer Skavnak</fullName>
                </value>
                <value>
                    <fullName>John Daniel</fullName>
                </value>
                <value>
                    <fullName>Julia Endersby</fullName>
                </value>
                <value>
                    <fullName>Karen Froistad</fullName>
                </value>
                <value>
                    <fullName>Katie Ohland</fullName>
                </value>
                <value>
                    <fullName>Kerry Moechnig-Studer</fullName>
                </value>
                <value>
                    <fullName>Kim Havelund</fullName>
                </value>
                <value>
                    <fullName>Kylie Angell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPS_Project_Name__c</fullName>
        <inlineHelpText>Naming Convention for this field should be : CPS/Client/Description/Month/Year</inlineHelpText>
        <label>CPS Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPS_Project_Number__c</fullName>
        <displayFormat>P{000000}</displayFormat>
        <label>CPS Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CPS_Scoped_days_for_CPS__c</fullName>
        <formula>PS_Project_Number__r.Scoped_CPS_days_RollUp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPS Scoped days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPS_scoped_value__c</fullName>
        <label>CPS scoped value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPS_scoped_value_for_CPS__c</fullName>
        <formula>PS_Project_Number__r.CPS_scoped_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPS scoped value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CS_Lead__c</fullName>
        <label>I/O Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alison Hollamby</fullName>
                </value>
                <value>
                    <fullName>Anthony Spencer</fullName>
                </value>
                <value>
                    <fullName>Ellie Mullins</fullName>
                </value>
                <value>
                    <fullName>Harpreet Dhami</fullName>
                </value>
                <value>
                    <fullName>Krutika Peres da Silva</fullName>
                </value>
                <value>
                    <fullName>Laura Ruttle</fullName>
                </value>
                <value>
                    <fullName>Leila Zid</fullName>
                </value>
                <value>
                    <fullName>Louis Lu</fullName>
                </value>
                <value>
                    <fullName>Matthew Rogers</fullName>
                </value>
                <value>
                    <fullName>Michael Lippstreu</fullName>
                </value>
                <value>
                    <fullName>Rachelle Visser</fullName>
                </value>
                <value>
                    <fullName>Sharmistha Banerjee</fullName>
                </value>
                <value>
                    <fullName>Tunrea Khaira</fullName>
                </value>
                <value>
                    <fullName>Udita Chaudhary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_On_Hold_Reason__c</fullName>
        <label>Cancellation/ On Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer request due to budget</fullName>
                </value>
                <value>
                    <fullName>Customer request due to requirement changes</fullName>
                </value>
                <value>
                    <fullName>Customer availability - No response</fullName>
                </value>
                <value>
                    <fullName>Product suitability</fullName>
                </value>
                <value>
                    <fullName>Duplicate/variation</fullName>
                </value>
                <value>
                    <fullName>Due to Order Cancellation</fullName>
                </value>
                <value>
                    <fullName>Customer Readiness - No response</fullName>
                </value>
                <value>
                    <fullName>Customer Request - Other priorities</fullName>
                </value>
                <value>
                    <fullName>Product suitability/issues/roadmap</fullName>
                </value>
                <value>
                    <fullName>Back with Commercial – Scope creep / Other reasons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chargeable_Expenses__c</fullName>
        <label>Chargeable Expenses</label>
        <summarizedField>Expense__c.Value__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Rechargeable__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Chargeable__c</fullName>
        <label>Chargeable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>PS_Project_Number__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Project__c</fullName>
        <label>Closed Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Track Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complexity_Indicator__c</fullName>
        <formula>(IF(RAG_Indicator_Red__c &gt; 0 , IMAGE(&quot;/resource/1674447737000/RAG_Indicator_Red?&quot; , &quot;Red&quot; , 25, 26) ,  
							IF(RAG_Indicator_Amber__c &gt; 0 , IMAGE(&quot;/resource/1674447737000/RAG_Indicator_Amber?&quot; , &quot;Amber&quot; , 25,26),
							   IF( RAG_Indicator_Green__c &gt; 0 ,IMAGE(&quot;/resource/1674447737000/RAG_Indicator_Green?&quot; , &quot;Green&quot; , 25 ,26) , &apos;&apos;))))</formula>
        <label>Complexity Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consulting_Project_Deliverable__c</fullName>
        <label>Consulting Project Deliverable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Research, Statistics, Norms, Validation</fullName>
                </value>
                <value>
                    <fullName>Executive Power One Assessments</fullName>
                </value>
                <value>
                    <fullName>Assessment / Development Centres</fullName>
                </value>
                <value>
                    <fullName>Job Analysis</fullName>
                </value>
                <value>
                    <fullName>Competency Modelling</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Process Design</fullName>
                </value>
                <value>
                    <fullName>Report Development</fullName>
                </value>
                <value>
                    <fullName>Test Construction</fullName>
                </value>
                <value>
                    <fullName>Strategic Needs Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consulting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consulting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Contact with this name either does not exist or does not belong to the selected Account.</errorMessage>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Expiry_Term_Date__c</fullName>
        <inlineHelpText>Review original and variation orders to confirm the expiry date; this is typically 1 year from the original Order Date. If needed, reach out to Sales Operations for support.</inlineHelpText>
        <label>Contract Expiry Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencyChangeEmailAlertInitiater__c</fullName>
        <description>This field has been created to track the opportunities currency change, which would happen via class CurrencyChangeOpportunity and Initiate Email Alert for PM,PC and Opportunity Owner.</description>
        <label>Currency Change Email Alert Initiater</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Scoped_Days_Effort__c</fullName>
        <label>Current Scoped Days Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Project__c</fullName>
        <label>Date Project changed to Closed/Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <label>Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Effectiveness__c</fullName>
        <description>Delivery Hours Timesheet/ Delivery Hours Billable</description>
        <formula>IF(OR(Delivery_Hours_Timesheet__c = 0, Delivery_Hours_Billable__c=0),0,Delivery_Hours_Billable__c/Delivery_Hours_Timesheet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Delivery Hours Timesheet/ Delivery Hours Billable</inlineHelpText>
        <label>Delivery Effectiveness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Hours_Billable__c</fullName>
        <description>Billable hours as per the attribution section excluding consultant name “GENERIC USER”.</description>
        <inlineHelpText>Billable hours as per the attribution section excluding consultant name “GENERIC USER”.</inlineHelpText>
        <label>Delivery Hours Billable</label>
        <summarizedField>RevenueAttribution__c.Attribution_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>RevenueAttribution__c.Consultant__c</field>
            <operation>notEqual</operation>
            <value>005200000018o4u</value>
        </summaryFilterItems>
        <summaryForeignKey>RevenueAttribution__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Delivery_Hours_Timesheet__c</fullName>
        <description>Timesheet records with task category “PS Consulting”, “PS Training” , “CS Delivery”, “PST Delivery” and “Commercial Operations”</description>
        <inlineHelpText>Timesheet records with task category “PS Consulting”, “PS Training” , “CS Delivery”, “PST Delivery” and “Commercial Operations”</inlineHelpText>
        <label>Delivery Hours Timesheet</label>
        <summarizedField>Timesheet_Line__c.Delivery_Hours_Timesheet__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Line__c.Timesheet_From_CPS_Project__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Line__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount Approved By</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Discounts can only be approved by selected users.</errorMessage>
            <filterItems>
                <field>User.Approve_TE_Discounts__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Approved_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_PS__c</fullName>
        <label>Discount PS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Product__c</fullName>
        <label>Discount Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_SPS__c</fullName>
        <label>Discount SPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_TS__c</fullName>
        <label>Discount TS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Total__c</fullName>
        <formula>Discount_Product__c + Discount_PS__c + Discount_SPS__c + Discount_TS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Edit_Filter__c</fullName>
        <formula>IF(((Project_Manager__c = $User.Id )&amp;&amp;( ISPICKVAL( $User.PSA_Role__c , &apos;Project Manager&apos;) ))||( ISPICKVAL( $User.PSA_Role__c , &apos;PSA Lead&apos;))||( RecordTypeId = &apos;012D0000000VAFcIAO&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Gross_Contribution__c</fullName>
        <description>Revenue – time cost – total expenses – total associate costs – total LBU costs – total other costs</description>
        <formula>IF( Revenue__c ==0, 0, (Revenue__c - Total_Time_Cost__c - Total_LBU_Costs__c -Total_Associate_Costs__c - Total_Other_Costs__c -  Total_Expenses__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Revenue – time cost – total expenses – total associate costs – total LBU costs – total other costs</inlineHelpText>
        <label>Gross Contribution (Amount)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Travel_Expenses__c</fullName>
        <label>Estimated Travel Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <inlineHelpText>Total expenses both chargeable and non chargeable</inlineHelpText>
        <label>Expenses</label>
        <summarizedField>Expense__c.Value__c</summarizedField>
        <summaryForeignKey>Expense__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Function_Invoice__c</fullName>
        <formula>IF(INCLUDES(Functional_Area__c, &apos;Consulting &amp; Training&apos;), &apos;CT&apos;, 
LEFT 
( 
IF(OR(INCLUDES(Functional_Area__c, &apos;PS Consulting&apos;), INCLUDES(Functional_Area__c, &apos;PS Training&apos;)), &apos;PS;&apos;, &apos;&apos;) + 
IF(INCLUDES(Functional_Area__c, &apos;PST – Client&apos;), &apos;PSTC;&apos;, &apos;&apos;),
LEN 
( 
IF(OR(INCLUDES(Functional_Area__c, &apos;PS Consulting&apos;), INCLUDES(Functional_Area__c, &apos;PS Training&apos;)), &apos;PS;&apos;, &apos;&apos;) + 
IF(INCLUDES(Functional_Area__c, &apos;PST – Client&apos;), &apos;PSTC;&apos;, &apos;&apos;)
) -1 
)
)</formula>
        <label>Function (Invoice)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Timesheet__c</fullName>
        <formula>IF(INCLUDES(Functional_Area__c, &apos;Internal&apos;), &apos;IN&apos;, 
IF(INCLUDES(Functional_Area__c, &apos;Generic PreSales/Sales&apos;),&apos;AM&apos;, 
IF(INCLUDES(Functional_Area__c, &apos;PST – Generic&apos;), &apos;PSTG&apos;, 
IF(INCLUDES(Functional_Area__c, &apos;Account PreSales/Sales&apos;), &apos;AP&apos;, 
IF(INCLUDES(Functional_Area__c, &apos;Sales&apos;), &apos;SAL&apos;, 
IF(INCLUDES(Functional_Area__c,&apos;Commercial Operations&apos;),&apos;CO&apos;,
IF(INCLUDES(Functional_Area__c, &apos;Internal Organisation&apos;), &apos;INT&apos;, 
LEFT 
( 
IF(INCLUDES(Functional_Area__c, &apos;PS Consulting&apos;), &apos;PSC;&apos;, &apos;&apos;) + 
IF(INCLUDES(Functional_Area__c, &apos;PS Training&apos;), &apos;PST;&apos;, &apos;&apos;) + 
IF(INCLUDES(Functional_Area__c, &apos;PST – Client&apos;), &apos;PSTC;&apos;, &apos;&apos;) + 
IF(INCLUDES(Functional_Area__c, &apos;Custom Solutions&apos;), &apos;CS;&apos;, &apos;&apos;)+ 
IF(INCLUDES(Functional_Area__c, &apos;Consulting &amp; Training&apos;), &apos;CT;&apos;, &apos;&apos;) + 
IF(INCLUDES(Functional_Area__c, &apos;Pre-sales&apos;), &apos;PSAL;&apos;, &apos;&apos;), 
LEN 
( 
IF(INCLUDES(Functional_Area__c, &apos;PS Consulting&apos;), &apos;PSC;&apos;, &apos;&apos;) + 
IF(INCLUDES(Functional_Area__c, &apos;PS Training&apos;), &apos;PST;&apos;, &apos;&apos;) + 
IF(INCLUDES(Functional_Area__c, &apos;PST – Client&apos;), &apos;PSTC;&apos;, &apos;&apos;) + 
IF(INCLUDES(Functional_Area__c, &apos;Custom Solutions&apos;), &apos;CS;&apos;, &apos;&apos;)+ 
IF(INCLUDES(Functional_Area__c, &apos;Consulting &amp; Training&apos;), &apos;CT;&apos;, &apos;&apos;) + 
IF(INCLUDES(Functional_Area__c, &apos;Pre-sales&apos;), &apos;PSAL;&apos;, &apos;&apos;) 
)-1 
) 
) 
) 
) 
)
) 
) 
)</formula>
        <label>Function (Timesheet)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>specifies the functional area of the Project</description>
        <label>Functional Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting &amp; Training</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Pre-sales</fullName>
                </value>
                <value>
                    <fullName>Commercial Operations</fullName>
                </value>
                <value>
                    <fullName>Internal Organisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Contribution__c</fullName>
        <description>Gross contribution (amount) / Revenue</description>
        <formula>IF(OR(Estimated_Gross_Contribution__c=0, Revenue__c = 0),0,Estimated_Gross_Contribution__c / Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross contribution (amount) / Revenue</inlineHelpText>
        <label>Gross Contribution (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Handover_from_SD_C__c</fullName>
        <label>Handover from SD&amp;C</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_O_Lead_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>I/O Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Is_I_O_Lead__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects9</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>